--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -16,6 +16,8 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/me/stored/courses">Khoá học của tôi</a>
           <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Đăng xuất</a>
         </div>
       </li>
